Support for additionalProperties in object and array tested
